Changes made from the "0.6" release to the "0.6.5" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Rendering and measuring routines now skip control characters instead of
  having a random behavior about them.
- Fixed bug #1820546 (glcRenderString("") displayed the last rendered string
  minus its first character)
- Fixed bug #1821219 (Blank characters (i.e. spaces) were wrongly transformed
  into null characters)
- Removed the use of FcStrSet and FcStrList objects for the catalog list. Use
  object __GLCarray instead.
- Fixed bug #1814773 (QuesoGLC uses the system library GLEW whenever
  possible. Otherwise a copy of GLEW is automagically built and embedded with
  QuesoGLC)
- Fixed bug #1812058 (QuesoGLC uses the system library FriBiDi whenever
  possible. Otherwise a copy of FriBiDi is automagically built and embedded with
  QuesoGLC)
- Fixed bug #1754660 (actually a partial fix. See explanations on bug #1754660
  on SourceForge.net)
- Renamed some type names (FT_ULong, FcChar8, ...) in order to make them more
  portable.
- Minimized the use of pthread_get_specific()/TlsGetValue() when only one thread
  is used and when ELF TLS is not available, since calls to those functions are
  expansive.
- Removed the useless QUESOGLC_STATIC_LIBRARY
- Modified QuesoGLC threading implementation in order to use ELF TLS when
  available. This allows to discard the expansive calls to pthread_get_specific.
- Removed the useless QUESOGLC_VERSION macro
- Removed __glcFaceDescGetCharMap() which were buggy for some fonts. Now uses
  Fontconfig patterns instead. This fixes a bug which created a new font for
  each newly rendered glyph.

Changes made from the "0.5" release to the "0.6" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed bug #1640256 : the advance vector now supports RTL strings
- Fixed a bug by disabling kerning when two successive characters of a string